--- a/sec/ergebnis.tex
+++ b/sec/ergebnis.tex
@@ -23,7 +23,40 @@ Die vorgestellten lokalen und globalen Eigenschaften von CR-Graphen reichen wie 
 \emph{Beweis:} Die Äquivalenz der Aussagen wird gezeigt, indem gezeigt wird, dass gilt: $(a)\rightarrow (b)\rightarrow (c)\rightarrow (a)$.
 Die bisher erlangten Erkenntnisse ermöglichen es bereits einen großen Teil dieser Aussage zu bestätigen. Somit wurde in den Lemmata \ref{lemma:lokal} und \ref{lemma:global1} gezeigt, dass $(a)\rightarrow (b)$ gilt. Ebenfalls wurde in Lemma \ref{lemma:global2} gezeigt, dass $(b)\rightarrow (c)$ gilt. Es bleibt also nur noch zu zeigen, dass auch $(c)\rightarrow (a)$ gültig ist.
 
-[Beweis folgt]
+Sei dazu $G$ ein Graph, welcher die Bedingungen \emph{A}, \emph{B}, \emph{G} und \emph{H} erfüllt und $H$ ein durch Color Refinement nicht von $G$ unterscheidbarer Graph, dann ist zu zeigen, dass $G$ und $H$ isomorph sind.
+Im Folgenden sei $C^s$, welche zur stabilen Partition $\mathcal{P}^s$ von der \glslink{disjunkte_vereinigung}{disjunkten Vereinigung} $G+H$ gehört.
+Aus Gleichung \ref{eq:2} folgt, dass es eine Abbildung $f:\mathcal{P}_G\rightarrow \mathcal{P}_H$ gibt, welche die Zellen der stabilen Partition von $G$ auf die der stabilen Partition von $H$ so abbildet, dass diese die selbe Farbe und Kardinalität besitzen.
+
+\begin{Lemma}
+	Die Abbildung $f$ stellt einen Isomorphismus von $C(G)$ nach $C(H)$ dar, sofern für beliebige $X,Y\in G$ gilt:
+	\begin{enumerate}[label=(\alph*)]
+		\item $G[X]\simeq H[f(X)]$ und
+		\item $G[X,Y]\simeq H[f(X),f(Y)]$
+	\end{enumerate}
+	\label{lemma:zell_isomorphismus}
+\end{Lemma}
+
+Beweis für Lemma \ref{lemma:zell_isomorphismus} (a):
+Sowohl $X$ als auch $f(X)$ sind reguläre Graphen, da diese Zellen einer stabilen Partition sind.
+Da beide Zellen durch die Konstruktion von $f$ die selbe Farbe besitzen und somit in der stabilen Partition $\mathcal{P}^s$ von $G+H$ in der selben Zelle liegen, haben die Graphen $G[X]$ und $H[f(X)]$ denselben Grad.
+Aus dieser Eigenschaft und Bedingung \emph{A} folgt somit, dass $G[X]$ ein Unigraph ist, dessen Isomorphieeigenschaften durch seine Gradsequenzen vollständig definiert ist und daraus Behauptung (a) folgt.
+
+Behauptung (b) folgt nach derselben Begründung aus Bedingung \emph{B}.\\
+
+Da die in Lemma \ref{lemma:zell_isomorphismus} festgestellte Isomorphie zwischen den Zellgraphen $C(G)$ und $C(H)$ nicht ausreicht, um auf eine Isomorphie zwischen $G$ und $H$ zu schließen, wird im Folgenden der Isomorphismus $\phi $ aufgestellt.
+Siehe dazu auch Kapitel [soundso], wo beschrieben wird, dass für den vorgestellten Graphen, welcher kein CR-Graph ist, die Bedingungen \emph{A} und \emph{B} dennoch erfüllt sind. %TODO Verweis einfügen
+Lemma \ref{lemma:zell_isomorphismus} lässt darauf schließen, dass $\phi (X)=f(X)$ bereits ein gültiger Isomorphismus zum Abbilden der Subgraphen von Zellen aufeinander ist.
+
+Die lokalen Eigenschaften von CR-Graphen helfen also dabei diesen Isomorphismus teilweise aufzustellen, dieser muss allerdings auch Zellübergreifend korrekt definiert sein, weshalb die globalen Eigenschaften ebenfalls benötigt werden.
+Jede anisotrope Komponente $A$ des Zellgraphen $C(G)$ kann nach Bedingung \emph{H} maximal eine heterogene Zelle $R_A$ enthalten.
+Sollte diese für eine Komponente nicht existieren, so sei $R_A$ eine beliebige Zelle minimaler Kardinalität in $A$.
+Nach (a) kann $\phi$ für die Zelle $R_A$ jeder anisotroper Komponente ein beliebiger Isomorphismus von $G[R_A]$ nach $H[f(R_A)]$ sein.
+Dieser Isomorphismus wird dann auf die anderen Zellen in $A$ übertragen, was im Folgenden genauer beschrieben wird.
+Da $A$ nach Bedingung \emph{G} ein Baum ist, kann dieser von der Zelle $R_A$ gewurzelt werden, sodass der Baum $A_R$ entsteht.
+Angenommen $\phi$ sei bereits für die Zelle $X$ definiert, so kann dieses über die Kante $G[X,Y]$ auf die Zelle übertragen werden, da nach der Monotonievoraussetzung von Bedingung \emph{G} und der Wahl von $R_A$ gilt, dass $|X|\leq |Y|$.
+Für die Zelle $Y$ muss $\phi$ dann nur noch so gewählt werden, dass dieses einen Isomorphismus von $G[X,Y]$ nach $H[f(X),f(Y)]$ darstellt, was wegen (b) und der Tatsache, dass alle Knoten von $Y$ den Grad 1 im bipartiten Graphen $G[X,Y]$ oder dessen bipartiten Komplement hat, was ebenfalls für $f(Y)$ gilt, möglich ist.\\
+
+Da $\phi$ durch seine Konstruktion ein Isomorphismus zwischen $G[X]$ und $H[f(X)]$ sowie zwischen $G[X,Y]$ und $H[f(X),f(Y)]$ ist, ergibt sich, dass $\phi$ ebenfalls ein Isomorphismus von $G$ zu $H$ ist.
 
 \subsection{Laufzeit}
 Zur Berechnung der Laufzeit wird im Folgenden davon ausgegangen, dass der Graph $G$ in Adjazenzlistendarstellung vorliegt.
