--- a/sec/gi_cr.tex
+++ b/sec/gi_cr.tex
@@ -11,6 +11,7 @@ Es konnte außerdem noch kein Algorithmus gefunden werden, welcher das Problem i
 Siehe \cite{Goldreich1991}.
 
 \subsection{Color Refinement}
+\label{sec/cr}
 Der Color Refinement Algorithmus stellt eine Heuristik dar, mit der in polynomieller Zeit festgestellt werden kann, dass zwei Graphen nicht isomorph sind.
 Der Algorithmus geht wie folgt vor.
 \begin{enumerate}
