--- a/sec/struktur_lokal.tex
+++ b/sec/struktur_lokal.tex
@@ -21,7 +21,8 @@ Die Basis dieses Kapitels bildet das folgende Lemma, welches für die Zellen $X$
 	\label{lemma:lokal}
 \end{Lemma}
 
-Wichtig ist an dieser Stelle, dass die in \emph{B} angesprochene Vereinigung von Sternen ausschließlich Sterne enthält, die die gleiche Anzahl, nämlich $t$, von Blättern besitzen.
+Ein leerer Graph beschreibt in diesem Falle einen Graphen, welcher zwar Knoten allerdings keine Kanten enthält.
+Wichtig ist an dieser Stelle außerdem, dass die in \emph{B} angesprochene Vereinigung von Sternen ausschließlich Sterne enthält, die die gleiche Anzahl, nämlich $t$, von Blättern besitzen.
 Um das Lemma beweisen zu können, werden zunächst folgende Hilfsaussagen benötigt.
 
 \begin{Lemma}
